--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,24 @@
 			<artifactId>spring-security-config</artifactId>
 			<version>6.4.1</version>
 		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-api</artifactId>
+			<version>0.12.6</version>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-impl</artifactId>
+			<version>0.12.6</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-jackson</artifactId> <!-- or jjwt-gson for Gson -->
+			<version>0.12.6</version>
+			<scope>runtime</scope>
+		</dependency>
+
 
 
 	</dependencies>
