--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=spring
 
-spring.datasource.url=jdbc:postgresql://postgres:5432/springdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/springdb
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
