--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,6 +34,8 @@ jobs:
           cache: maven
       - name: Build with Maven
         run: mvn clean install
+      - name: Run Tests
+        run: mvn test
       - name: Build & push Docker image
         uses: mr-smithers-excellent/docker-build-push@v6
         with:
