--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,10 +7,50 @@ on:
     branches: [ "main", "sprint4/feature" ]
 
 jobs:
-  build:
-
+  setup:
     runs-on: ubuntu-latest
 
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+
+  build:
+    runs-on: ubuntu-latest
+    needs: setup
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Build with Maven
+        run: mvn clean install
+
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Run Tests
+        run: mvn test
+
+  analyze:
+    runs-on: ubuntu-latest
+    needs: test
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Analyze Code Quality
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=prudhvi-nelaturi_customer-service
+
+  docker:
+    runs-on: ubuntu-latest
+    needs: analyze
     services:
       postgres:
         image: postgres:13
@@ -24,23 +64,10 @@ jobs:
           --health-cmd="pg_isready -U postgres"
           --health-timeout=30s
           --health-retries=5
+
     steps:
       - uses: actions/checkout@v4
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: maven
-      - name: Build with Maven
-        run: mvn clean install
-      - name: Run Tests
-        run: mvn test
-      - name: Analyze Code Quality
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=prudhvi-nelaturi_customer-service
-      - name: Build & push Docker image
+      - name: Build & Push Docker Image
         uses: mr-smithers-excellent/docker-build-push@v6
         with:
           image: prudhvi2902/customer-service-image
