--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,11 @@
 			<artifactId>spring-kafka</artifactId>
 			<version>3.3.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.15.2</version>
+		</dependency>
 
 
 	</dependencies>
