--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.kafka.bootstrap-servers=localhost:9092
-spring.kafka.consumer.group-id=group_id
+spring.kafka.consumer.group-id=candidate-service
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
